fix devfolio overflow

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -1,60 +1,64 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-	overflow-x: hidden;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 html {
-	scroll-behavior: smooth;
-  }
-i{
-	overflow: visible !important;
+  scroll-behavior: smooth;
 }
-img{
-	width: 100%;
+body {
+  overflow-x: hidden;
 }
-.aa
-{
-	display: flex;
-	justify-content: space-between;
+i {
+  overflow: visible !important;
 }
-.aaa-logo{
-	margin-left: 7vw;
-	margin-top: 28.6px;
-	width: 95.25px;
+img {
+  width: 100%;
 }
-.aab{
-	width: 45vw;
-	margin-right: 7vw;
-	padding-top: 30px;
-	height:89.05px;
-	margin-top: 28.6px;
+.aa {
+  display: flex;
+  justify-content: space-between;
 }
-.links
-{
-	display: flex;
-	font-family:Montserrat;
-	color: #DADADA;
-	font-size: 16px;
-	justify-content: space-between;
-	list-style: none;
-	font-weight: 600;
+.aaa-logo {
+  margin-left: 7vw;
+  margin-top: 28.6px;
+  width: 95.25px;
+}
+.aab {
+  width: 45vw;
+  margin-right: 7vw;
+  padding-top: 30px;
+  height: 89.05px;
+  margin-top: 28.6px;
+}
+.links {
+  display: flex;
+  font-family: Montserrat;
+  color: #dadada;
+  font-size: 16px;
+  justify-content: space-between;
+  list-style: none;
+  font-weight: 600;
 }
 
 .background {
-	padding-top: 100px;
-	/* background-image: linear-gradient(-44.66deg, #2b0a6a 0%, #250a8f 52.2%, #0a0737 100%); */
-	background-image:linear-gradient(76.66deg, #3d07bb 0%, #163ec0 52.2%, #006eff 100%);
-	/* background-image:linear-gradient(76.66deg, #326076 0%, #1691c0 52.2%, #374352 100%); */
-	/* background-image:linear-gradient(30deg,#2394f8 0%, #1691c0 52.2%,#0e71dc 100%); */
-
+  padding-top: 100px;
+  /* background-image: linear-gradient(-44.66deg, #2b0a6a 0%, #250a8f 52.2%, #0a0737 100%); */
+  background-image: linear-gradient(
+    76.66deg,
+    #3d07bb 0%,
+    #163ec0 52.2%,
+    #006eff 100%
+  );
+  /* background-image:linear-gradient(76.66deg, #326076 0%, #1691c0 52.2%, #374352 100%); */
+  /* background-image:linear-gradient(30deg,#2394f8 0%, #1691c0 52.2%,#0e71dc 100%); */
 }
 
-.reg{
-	margin-top: 40px;
-	/* width: 275px; */
-/* height: 50px; */
-/* display: flex;
+.reg {
+  margin-top: 40px;
+  /* width: 275px; */
+  /* height: 50px; */
+  /* display: flex;
 border: 2px solid #FFFFFF;
 	border-radius: 6px;
 	box-shadow: 1px 3px 3px #0000002f;
@@ -68,129 +72,125 @@ border: 2px solid #FFFFFF;
 	margin-bottom: 40px;
 	background: #CFC2C21F 0% 0% no-repeat padding-box; */
 }
-.links a{
-	text-decoration: none;
-	color: #DADADA;
+.links a {
+  text-decoration: none;
+  color: #dadada;
 }
-.b{
-	display: flex;
-	margin-top: 60px;
-	justify-content: flex-start;
-	/* border: 2px solid red; */
+.b {
+  display: flex;
+  margin-top: 60px;
+  justify-content: flex-start;
+  /* border: 2px solid red; */
 }
-.hero{
-	width:46.5vw;
-	margin-left: 7vw;
-	/* border: 2px solid red;	 */
+.hero {
+  width: 46.5vw;
+  margin-left: 7vw;
+  /* border: 2px solid red;	 */
 }
-.hack{
-	display:flex;
+.hack {
+  display: flex;
 }
-.name{
-	font-weight: 200;
-	font-size: 120px;
-	/* margin-right:10px; */
-	/* margin-left: -12px; */
-	color: #dddfeb;
-	/* font-family: 'Montserrat'; */
+.name {
+  font-weight: 200;
+  font-size: 120px;
+  /* margin-right:10px; */
+  /* margin-left: -12px; */
+  color: #dddfeb;
+  /* font-family: 'Montserrat'; */
 }
-.location{
-	font-weight: 400;
-	font-size: 22px;
-	color:white;
-	font-family: 'Montserrat';
+.location {
+  font-weight: 400;
+  font-size: 22px;
+  color: white;
+  font-family: "Montserrat";
 }
-.venue{
-	display:flex;
-	justify-content: space-between;
-	margin-top: 5px;
+.venue {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
 }
-.start{
-	margin-top:30px;
-	margin-left: 15px;
-	font-weight: 300;
-	font-size: 16px;
-	color:white;
-	font-family: 'Montserrat';
+.start {
+  margin-top: 30px;
+  margin-left: 15px;
+  font-weight: 300;
+  font-size: 16px;
+  color: white;
+  font-family: "Montserrat";
 }
-.box{
-	border: 1px solid white;
-	width:50px;
-	border-radius: 9px;;
-	height:50px;
-	font-weight: 300;
-	font-size: 35px;
-	margin:0 5px;
-	vertical-align: middle;
-	color:white;
-	font-family: 'Montserrat';
-	justify-content: center;
-	align-items: center;
-	display: flex;
+.box {
+  border: 1px solid white;
+  width: 50px;
+  border-radius: 9px;
+  height: 50px;
+  font-weight: 300;
+  font-size: 35px;
+  margin: 0 5px;
+  vertical-align: middle;
+  color: white;
+  font-family: "Montserrat";
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
-.hour{
-	display: flex;
-	/* border: 1px solid red; */
+.hour {
+  display: flex;
+  /* border: 1px solid red; */
 }
-.time{
-	/* display: flex; */
-	margin-top:30px ;
-	margin-left: 10px;
-	/* border: 1px solid red; */
-	display: inline-block;
-	margin-right: 22px;
-	
+.time {
+  /* display: flex; */
+  margin-top: 30px;
+  margin-left: 10px;
+  /* border: 1px solid red; */
+  display: inline-block;
+  margin-right: 22px;
 }
-.min
-{
-	display: flex;
+.min {
+  display: flex;
 }
-.hour1{
-	font-weight: 400;
-	font-size: 15px;
-	color:white;
-	text-align: center;
-	margin-top: 5px;
-	font-family: 'Montserrat';	
+.hour1 {
+  font-weight: 400;
+  font-size: 15px;
+  color: white;
+  text-align: center;
+  margin-top: 5px;
+  font-family: "Montserrat";
 }
-.det{
-	width:86vw;
-	font-family: Cera pro;
+.det {
+  width: 86vw;
+  font-family: Cera pro;
 
-	/* border: 2px red solid; */
-	margin: 0 auto;
-	margin-top: -110px;
-	margin-bottom: 50px !important;
-	
+  /* border: 2px red solid; */
+  margin: 0 auto;
+  margin-top: -110px;
+  margin-bottom: 50px !important;
 }
-.ques{
-	display: flex;
-	font-family:Montserrat;
-	color: #ffffff;
-	font-size: 45px;
-	justify-content: center;
-	font-weight: 500;
-
+.ques {
+  display: flex;
+  font-family: Montserrat;
+  color: #ffffff;
+  font-size: 45px;
+  justify-content: center;
+  font-weight: 500;
 }
-.ans{
-	margin-top: 30px;
-	padding: 0 15%;
+.ans {
+  margin-top: 30px;
+  padding: 0 15%;
 }
-.ans p{
-	display: flex;
-	font-family:Montserrat;
-	color: #f8f8f8;
-	font-size: 18px;
-	text-align: center;
-	justify-content: center;
-	font-weight: 400;
+.ans p {
+  display: flex;
+  font-family: Montserrat;
+  color: #f8f8f8;
+  font-size: 18px;
+  text-align: center;
+  justify-content: center;
+  font-weight: 400;
 }
 
-#navbar{
-	position: fixed;
-	top:0;
-	left: 0;
-	width: 100%;
-	height: 100px;
-	transition: .5s;
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  transition: 0.5s;
 }
